--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -34,6 +34,7 @@ jobs:
 
       - name: Commit new avatar state
         run: |
+          git status
           if [[ `git status --porcelain` ]]; then
             git config user.name github-actions
             git config user.email github-actions@github.com
