Amend current github-actions commit in workflow
To limit growth of git history due to automated state changes.

In any other situation this would not be acceptable.
However, since this repo has no other users, the damage should be limited.

--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -39,6 +39,11 @@ jobs:
             git config user.name github-actions
             git config user.email github-actions@github.com
             git add state.txt
-            git commit -m "New avatar state"
-            git push
+            if [[ `git log -1 --format='%an'` == 'github-actions' ]]; then
+              git commit --amend -m "New avatar state"
+              git push -f
+            else
+              git commit -m "New avatar state"
+              git push
+            fi
           fi
