--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -33,6 +33,8 @@ jobs:
         with:
           path: state.txt
           key: state-${{ github.run_number }}
+          restore-keys: |
+            state-
 
       - name: Update avatar on Slack
         run: npm start
