--- a/.github/workflows/abstract-avatar.yml
+++ b/.github/workflows/abstract-avatar.yml
@@ -21,6 +21,7 @@ jobs:
           path: slack-abstract
 
       - name: Setup Node.js
+        id: setup-node
         uses: actions/setup-node@v2
         with:
           node-version: '16'
@@ -28,6 +29,7 @@ jobs:
           cache-dependency-path: slack-abstract/package-lock.json
 
       - name: Install Node.js dependencies
+        if: steps.setup-node.outputs.cache-hit != 'true'
         run: npm install
         working-directory: slack-abstract
 
