--- a/.github/workflows/abstract-avatar.yml
+++ b/.github/workflows/abstract-avatar.yml
@@ -3,7 +3,8 @@ name: Update avatar on Slack
 on:
   workflow_dispatch:
   schedule:
-    # every 5th minute
+    # Schedule to run every 5th minute,
+    # but in practice may run 10 minutes to an hour late.
     - cron: '*/5 * * * *'
 
 jobs:
